--- a/shopping_cart_api/config/database.yml
+++ b/shopping_cart_api/config/database.yml
@@ -14,19 +14,19 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
-  host: <%= ENV.fetch("DB_HOST") { "127.0.0.1" } %>
+  password: Nam300103
+  host: <%= ENV.fetch("DB_HOST") { "172.28.144.1" } %>
 
 development:
   <<: *default
-  database: shopping_cart_api_development
+  database: shopping_cart
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: shopping_cart_api_test
+  database: shopping_cart
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
