--- a/shopping_cart_api/Gemfile
+++ b/shopping_cart_api/Gemfile
@@ -22,6 +22,9 @@ gem "solid_cache"
 gem "solid_queue"
 gem "solid_cable"
 
+# Object oriented authorization for Rails applications
+gem 'pundit', '~> 2.5'
+
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
 
