--- a/shopping_cart_api/Gemfile
+++ b/shopping_cart_api/Gemfile
@@ -10,6 +10,7 @@ gem "puma", ">= 5.0"
 # gem "jbuilder"
 
 gem 'jwt'
+gem 'kaminari'
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
 gem "bcrypt", "~> 3.1.7"
