--- a/shopping_cart_api/Gemfile
+++ b/shopping_cart_api/Gemfile
@@ -11,6 +11,10 @@ gem "puma", ">= 5.0"
 
 gem 'jwt'
 gem 'kaminari'
+gem 'rack-cors'
+group :development, :test do
+  gem 'byebug'
+end
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
 gem "bcrypt", "~> 3.1.7"
