--- a/shopping_cart_api/Gemfile
+++ b/shopping_cart_api/Gemfile
@@ -14,6 +14,9 @@ gem 'kaminari'
 gem 'rack-cors'
 group :development, :test do
   gem 'byebug'
+  gem 'rspec-rails', '~> 7.1'
+  gem 'shoulda-matchers',  '~> 6.4'
+  gem 'factory_bot_rails'
 end
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
