Fix some bugs - Fix logging in fail with wrong login information - Fix show not found page when edit product with product_id not exist in db - update api to support more image types

--- a/shopping_cart_api/Gemfile
+++ b/shopping_cart_api/Gemfile
@@ -12,6 +12,7 @@ gem "puma", ">= 5.0"
 gem 'jwt'
 gem 'kaminari'
 gem 'rack-cors'
+gem 'graphql'
 group :development, :test do
   gem 'byebug'
   gem 'rspec-rails', '~> 7.1'
