--- a/shopping_cart_api/Gemfile
+++ b/shopping_cart_api/Gemfile
@@ -14,6 +14,7 @@ gem 'kaminari'
 gem 'rack-cors'
 gem 'graphql'
 gem 'apollo_upload_server'
+gem 'redis'
 group :development, :test do
   gem 'byebug'
   gem 'rspec-rails', '~> 7.1'
