--- a/shopping_cart_api/Gemfile
+++ b/shopping_cart_api/Gemfile
@@ -15,6 +15,7 @@ gem 'rack-cors'
 gem 'graphql'
 gem 'apollo_upload_server'
 gem 'redis'
+gem 'dotenv-rails', '~> 3.1', '>= 3.1.8'
 group :development, :test do
   gem 'byebug'
   gem 'rspec-rails', '~> 7.1'
