--- a/shopping_cart_api/Gemfile
+++ b/shopping_cart_api/Gemfile
@@ -16,6 +16,7 @@ gem 'graphql'
 gem 'apollo_upload_server'
 gem 'redis'
 gem 'dotenv-rails', '~> 3.1', '>= 3.1.8'
+gem 'active_model_serializers', '~> 0.10.15'
 group :development, :test do
   gem 'byebug'
   gem 'rspec-rails', '~> 7.1'
