--- a/shopping_cart_api/Gemfile
+++ b/shopping_cart_api/Gemfile
@@ -17,6 +17,7 @@ gem 'apollo_upload_server'
 gem 'redis'
 gem 'dotenv-rails', '~> 3.1', '>= 3.1.8'
 gem 'active_model_serializers', '~> 0.10.15'
+gem 'sanitize', '~> 7.0'
 group :development, :test do
   gem 'byebug'
   gem 'rspec-rails', '~> 7.1'
