--- a/shopping_cart_frontend/package.json
+++ b/shopping_cart_frontend/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
+    "dompurify": "^3.2.5",
     "vue": "^2.6.14",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.6.5",
     "vuejs-paginate": "^2.1.0",
     "yup": "^1.6.1"
